# cp.py

./: README.md  setup.cfg  setup.py
cp/: __init__.py
tests/examples/: cp("not-existing","dst") # IOError  cp(__file__,dst)  cp(dirname(__file__),dst)
